...
    appExperience.updateAuthState(
      userId: user?.uid,
      isSignedIn: user != null,
    );

    return MaterialApp(
      title: 'Mindfulness with Nature',
      theme: ThemeData(
        primarySwatch: Colors.green,
        scaffoldBackgroundColor: appExperience.scaffoldBackgroundColor,
        bottomNavigationBarTheme: BottomNavigationBarThemeData(
          backgroundColor: appExperience.navBackgroundColor,
          selectedItemColor: Colors.black,
...
